--- a/sojava-thread/src/main/java/com/someecho/sojava/thread/artconcurrentbook/并发编程的艺术.md
+++ b/sojava-thread/src/main/java/com/someecho/sojava/thread/artconcurrentbook/并发编程的艺术.md
@@ -1,2 +1,32 @@
 本模块是《并发编程的艺术》相关源代码及调试代码存放处
 > https://github.com/malinghan/ArtConcurrentBook
+
+# chapter01
+- 什么是上下文切换，如何避免切换
+- 死锁
+# chapter02 java并发机制原理
+- volatile
+- synchronized
+  - 对象头有哪些信息
+  - 锁升级过程
+- 原子操作
+# chapter03 JVM内存模型
+- 内存模型: 顺序一致性、可见性、原子性
+- synchronized 
+- volatile 
+- final
+# chapter04 Thread
+# chapter05 Lock
+# chapter06 并发容器
+# chapter07 原子类
+# chapter08 并发工具
+- CountdownLatch
+- CyclicBarrier
+- Semaphore
+# chapter09 线程池
+# chapter10 Executor
+# chapter11 并发编程实践
+- 生产消费模型
+- 线上问题定位
+- 并发性能测试
+
